--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -43,12 +43,18 @@ nav {
     padding: 20px;
     display: grid;
     grid-template-columns: 1fr auto;
-    gap: 16px;
+    gap: 16em;
 }
 
 .nav-menu-buttons {
     display: flex;
     gap: 8px;
+}
+
+.menue {
+    display: flex; 
+    justify-content: space-around;
+    margin-top: 1vh;
 }
 
 .login-button,
